tests/fixtures/negative/numeric_literals/004_bigint_decimal_point.js
// Expected error: bigint literals cannot contain a decimal point.
const value = 1.0n;
